fix: fix icon misalignment on some mobile browsers

--- a/Frontend Task 4/style.css
+++ b/Frontend Task 4/style.css
@@ -94,6 +94,7 @@ label .icon {
     height: auto;
     position: absolute;
     left: 92%;
+    top: 12px;
 }
 
 label .jfdedgwfzexf4hjin {
